5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1680_2471.log
== SUBMITION (2019-05-01 22:46:45) 
-- CODE:
idade = int9input("Idade: ")
imc = float(input("IMC: "))

 
if idade <= 0 and idade > 130 and imc <= 0:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos)
else:
			 if idade > 45 and imc < 22:
			 risco = "Baixo"
			 elif idade > 45 and imc <= 22:
			 risco = "Médio"
			 elif idade >= 45 and imc < 22:
			 risco = "Médio"
			 elif >= 45 and imc >- 22:
			 risco = "Alto"
			 print ("Entradas:",idade,"anos e IMC",imc)
			 print ("Risco:",risco)
		 
-- EXECUTION TIME:
0.177329
-- ERROR:
  File "/home/codebench/codes/1680/2471/main.py", line 7
    print ("Dados invalidos)
                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:46:47) 
-- CODE:
idade = int9input("Idade: ")
imc = float(input("IMC: "))

 
if idade <= 0 and idade > 130 and imc <= 0:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos)
else:
			 if idade > 45 and imc < 22:
			 risco = "Baixo"
			 elif idade > 45 and imc <= 22:
			 risco = "Médio"
			 elif idade >= 45 and imc < 22:
			 risco = "Médio"
			 elif >= 45 and imc >- 22:
			 risco = "Alto"
			 print ("Entradas:",idade,"anos e IMC",imc)
			 print ("Risco:",risco)
		 
-- ERROR:
File "XXXX", line 7
    print ("Dados invalidos)
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:48:40) 
-- CODE:
idade = int9input("Idade: ")
imc = float(input("IMC: "))

 
if idade <= 0 and idade > 130 and imc <= 0:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos)
else:
	if idade > 45 and imc < 22:
		risco = "Baixo"
	elif idade > 45 and imc <= 22:
		 risco = "Médio"
	elif idade >= 45 and imc < 22:
		 risco = "Médio"
	elif >= 45 and imc >- 22:
		 risco = "Alto"

		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		 
-- ERROR:
File "XXXX", line 7
    print ("Dados invalidos)
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:49:10) 
-- CODE:
idade = int9input("Idade: ")
imc = float(input("IMC: "))


if idade <= 0 and idade > 130 and imc <= 0:
print ("Entradas:",idade,"anos e IMC",imc)
print ("Dados invalidos)
else:
if idade > 45 and imc < 22:
	risco = "Baixo"
elif idade > 45 and imc <= 22:
	 risco = "Médio"
elif idade >= 45 and imc < 22:
	 risco = "Médio"
elif >= 45 and imc >- 22:
	 risco = "Alto"

	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Risco:",risco)
		 
-- ERROR:
File "XXXX", line 6
    print ("Entradas:",idade,"anos e IMC",imc)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:12:36) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	if idade < 45 and imc < 22:
		risco = "Baixo"
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		
	elif idade < 45 and imc < 22:
		risco = "Médio"
		
	elif >= 45 and imc >= 22:
		risco = "Alto"

	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- ERROR:
File "XXXX", line 14
    elif >= 45 and imc >= 22:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:13:31) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		
	elif idade < 45 and imc < 22:
		risco = "Médio"
		
	elif >= 45 and imc >= 22:
		risco = "Alto"

	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- ERROR:
File "XXXX", line 15
    elif >= 45 and imc >= 22:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:13:53) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		
	elif idade < 45 and imc < 22:
		risco = "Médio"
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"

	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:14:20) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		
	elif idade < 45 and imc < 22:
		risco = "Médio"
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"

	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- EXECUTION TIME:
0.13884
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Dados invalidos
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:16:20) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"

	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:17:39) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:19:41) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade > 0) and (idade < 130) and (imc > 0):
	
	if idade > 45 and imc > 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:22:24) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade > 0) and (idade < 130) and (imc > 0):
	
	if idade > 45 and imc > 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- EXECUTION TIME:
0.173253
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:23:37) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade > 45 and imc > 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- EXECUTION TIME:
0.15121
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Dados invalidos
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:29:48) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- EXECUTION TIME:
0.132925
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Dados invalidos
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:30:51) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- EXECUTION TIME:
0.214109
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Dados invalidos
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:30:52) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
else:
	print ("Entradas:",idade,"anos e IMC",imc)
	print ("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:31:31) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Risco:",risco)
	else:
		print ("Entradas:",idade,"anos e IMC",imc)
		print ("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:55) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade < 0) and (idade < 130) and (imc > 0):
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Risco:",risco)
	else:
		risco = "Dados invalidos"
		print (risco)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:33:40) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade < 0) and (idade < 130) and (imc > 0):
	risco = "Dados invalidos"
	print (risco)
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Risco:",risco)
	else:
		risco = "Dados invalidos"
		print (risco)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:27) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
	if idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Risco:",risco)
	else:
		risco = "Dados invalidos"
		print (risco)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:42) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
	elif idade < 45 and imc < 22:
		risco = "Baixo"
		print ("Risco:",risco)
	
	elif idade < 45 and imc >= 22:
		risco = "Médio"
		print ("Risco:",risco)

	elif idade >= 45 and imc < 22:
		risco = "Médio"
		print ("Risco:",risco)
		
	elif idade >= 45 and imc >= 22:
		risco = "Alto"
		print ("Risco:",risco)
	else:
		risco = "Dados invalidos"
		print (risco)
-- ERROR:
File "XXXX", line 10
    elif idade < 45 and imc < 22:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:35:15) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Médio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Médio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

else:
	risco = "Dados invalidos"
	print (risco)
-- EXECUTION TIME:
0.227958
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:35:16) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Médio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Médio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

else:
	risco = "Dados invalidos"
	print (risco)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:35:30) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Médio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Médio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

else:
	risco = "Dados invalidos"
	print (risco)
-- EXECUTION TIME:
0.137658
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:35:36) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Médio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Médio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)


-- EXECUTION TIME:
0.303853
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco:
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:36:11) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Medio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Medio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

risco = "Dados invalidos"
		print (risco)
-- EXECUTION TIME:
0.216313
-- ERROR:
  File "/home/codebench/codes/1680/2471/main.py", line 27
    print (risco)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:36:12) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Medio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Medio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

risco = "Dados invalidos"
		print (risco)
-- ERROR:
File "XXXX", line 27
    print (risco)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:36:35) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Medio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Medio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

else:
	risco = "Dados invalidos"
	print (risco)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:36:49) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print ("Entradas:",idade,"anos e IMC",imc)

if (idade <= 0) and (idade > 130) and (imc <= 0):
	risco = "Dados invalidos"
	print (risco)
	
elif idade < 45 and imc < 22:
	risco = "Baixo"
	print ("Risco:",risco)
	
elif idade < 45 and imc >= 22:
	risco = "Medio"
	print ("Risco:",risco)

elif idade >= 45 and imc < 22:
	risco = "Medio"
	print ("Risco:",risco)
		
elif idade >= 45 and imc >= 22:
	risco = "Alto"
	print ("Risco:",risco)

else:
	risco = "Dados invalidos"
	print (risco)
-- EXECUTION TIME:
0.148234
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
